# neurobrowser

./: .gitignore  ANALYSIS.md  CHANGELOG.md  CONTEXT.md  CURRENT_STATE.md  Cargo.toml  PROJECT.md  README.md  SKILL.md  extract_pdf.swift  project.yaml  project.yml  ralph-plan-1.md  ralph-plan-2.md  ralph-plan-3.md  verify.sh
.github/workflows/: ci.yml
.opencode/: ralph-loop.json
NeuroBrowser/: AppDelegate.swift  BrowserViewController.swift  ContentViewController.swift  Info.plist  MainWindowController.swift  ReactControlSurfaceViewController.swift  SidebarViewController.swift
NeuroBrowser.xcodeproj/: project.pbxproj
_working-files/: 20260708-1300-cursor-v0.1.1-roadmap-complete.md
docs/: AGENT-SURFACE.md  CODE_ANALYSIS.md  CODE_REVIEW.md  RUNBOOK-DEV.md  TESTING-NOTES.md  frontend-architecture-spike.md
docs/adr/: ADR-001-react-tauri-primary.md
docs/notes/: LOCAL_NOTES.template.md  README.md
docs/references/: prior-art.md
docs/specs/: SPEC-AUTONOMOUS-BROWSER-AGENT.md
docs/stories/: STORY-001-autonomous-browser-agent-core.md
research/: rust_coding_frameworks.md
src/: lib.rs
src-tauri/: Cargo.toml  appkit.html  build.rs  index.html  package-lock.json  package.json  tauri.conf.json  vite.config.js
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: App.jsx  appkit.jsx  hostAdapters.js  main.jsx  main.rs  runtime.rs  styles.css
src/agent/: memory.rs  mod.rs  observability.rs  policy.rs  streaming.rs  worker.rs
src/browser/: mod.rs
src/providers/: anthropic.rs  mod.rs  ollama.rs  openai.rs
src/session/: mod.rs
src/tools/: contracts.rs  (+2 more)
tests/: action_policy.rs  agent_memory_metrics.rs  autonomous_agent.rs  error_types.rs  headless_daemon.rs  streaming.rs  streaming_agent.rs  workers.rs
(+1 files in other folders)
