[package]
name = "neurobrowser"
version = "0.1.0"
edition = "2021"
description = "AI-native browser with custom rendering engine"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
thiserror = "2"
tracing = "0.1"
async-trait = "0.1"
url = "2"
futures = "0.3"
scraper = "0.22"
regex-lite = "0.1"
uuid = { version = "1.0", features = ["v4"] }
schemars = { version = "0.8", features = ["derive"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dev-dependencies]
tempfile = "3"
